VULA-2388: fix for when text overlaps MCQ options

--- a/sakai-evaluation-tool/src/webapp/content/css/evaluation_base.css
+++ b/sakai-evaluation-tool/src/webapp/content/css/evaluation_base.css
@@ -1699,6 +1699,8 @@ table.tablesorter th.header.headerSortDown {
 }
 .evaluation .item .title .label {
   margin-left: 40px;
+  white-space: normal;
+  text-align: left;
 }
 .evaluation .item .compulsory .title .required {
   display: inline-block;
